change index name

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://use.fontawesome.com/7908478e60.js"></script>
   <script src="./js/jquery.min.js"></script>
   <script src="./js/login.js"></script>
-  <title>Login</title>
+  <title>Login Design</title>
 </head>
 <body>
   <div class="wrap"> 
