--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
           <label for="user-password">Password</label>
         </div>
         <input type="password" name="" id="user-password">
+        <a href="javascript:;"><span>Forgot?</span></a>
       </div>
       <span class="errorMsg"></span>
       <div class="btn">
         <input type="submit" value="Login" id="btn">
       </div>
+      
     </div>
   </div>
 </body>
